# interface

./: Makefile  README.md  go.mod  go.sum  protobuf_importpath_change.py
gen_src/cpp/authenticate/: token.pb.cc  token.pb.h
gen_src/cpp/escrow/: escrow.pb.cc  escrow.pb.h
gen_src/cpp/payment/: payment.pb.cc  payment.pb.h
gen_src/cpp/subscribe/: subscribe.pb.cc  subscribe.pb.h
gen_src/cpp/subscribe_customers/: subscribe_customers.pb.cc  subscribe_customers.pb.h
gen_src/csharp/: Authenticate.cs  Card.cs  Escrow.cs  Payment.cs  Subscribe.cs  SubscribeCustomers.cs  Token.cs  User.cs
gen_src/dart/authenticate/: token.pbenum.dart
gen_src/dart/escrow/: escrow.pb.dart  escrow.pbenum.dart  escrow.pbjson.dart  escrow.pbserver.dart
gen_src/dart/payment/: payment.pb.dart  payment.pbjson.dart
gen_src/dart/subscribe/: subscribe.pb.dart  subscribe.pbenum.dart  subscribe.pbjson.dart  subscribe.pbserver.dart
gen_src/dart/subscribe_customers/: subscribe_customers.pb.dart  subscribe_customers.pbenum.dart  subscribe_customers.pbjson.dart  subscribe_customers.pbserver.dart
gen_src/go/authenticate/: token.pb.go
gen_src/go/escrow/: escrow.pb.go
gen_src/rust/: annotations.rs  authenticate.rs  card.rs  escrow.rs  http.rs  payment.rs  subscribe.rs  subscribe_customers.rs  token.rs  user.rs
src/authenticate/: token.proto
src/escrow/: escrow.proto
src/iamport/: iamport.proto
src/payment/: payment.proto
src/subscribe/: subscribe.proto
src/subscribe_customers/: subscribe_customers.proto
src/v2/txs/: txs.proto
supplements/rust/: Cargo.toml  iamport_protobuf.rs
(+387 files in other folders)
